client/styles.css
@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');

body {
    background-color: #3e6795;
}

.menu {
    width: 50%;
    margin-left: auto;
    margin-right: auto;
    background-color: #294d76;
    border: #000000 solid 2px;
    border-radius: 25px;
    padding: 10px;
    box-shadow: #000000 0px 0px 5px;
}
a {
    text-decoration: none; /* Removes the underline */
    color: blue;          /* Optional: set link color */
}

a:hover {
    text-decoration: underline; /* Optional: add underline on hover */
}

.amatic-sc-regular {
    font-family: "Amatic SC", sans-serif;
    font-weight: 400;
    font-style: normal;
}
  
.amatic-sc-bold {
    font-family: "Amatic SC", sans-serif;
    font-weight: 700;
    font-style: normal;
}

input[type=text] {
    width: 50%;
    border-radius: 5px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 15px;
    display: block;
    font-family: "Amatic SC", sans-serif;
    font-weight: 600;
    font-size: 45px;
    box-shadow: #000000 0px 0px 5px;
}

button {
    background-color: #FCFF4B;
    width: 50%;
    border-radius: 25px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
    display: block;
    font-family: "Amatic SC", sans-serif;
    font-weight: 600;
    font-size: 45px;
    box-shadow: #000000 0px 0px 5px;
}
button:hover:not(.voteOpp) {
    background-color: #fdff8b;
    width: 50%;
    border-radius: 25px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
    display: block;
    font-family: "Amatic SC", sans-serif;
    font-weight: 600;
    /* font-size: 20px; */
    box-shadow: #6a6a6a 0px 0px 8px;
}

.HTP{
    size:20px;
    background-color: #FCFF4B;
    padding: 25px;
    display:block;
    border: 2;
    font-family: "Amatic SC", sans-serif;
    font-size:20px;
    margin-left: auto;
    margin-top: 20px;
    text-decoration: none;
    border-color: grey;
    
}

h1 {
    text-align: center;
    font-family: "Amatic SC", sans-serif;
    font-weight: 700;
    font-size: 100px;
}
h2{
    text-align: center;
    font-family: "Amatic SC", sans-serif;
    font-weight: 700;
    font-size: 60px;
}

.Code_lbl {
    font-family: "Amatic SC", sans-serif;
    text-align: center;
    font-size: 40px;
}

.Code_ph {
    font-family: "Amatic SC", sans-serif;
    text-align: center;
}

.Username_lbl {
    font-family: "Amatic SC", sans-serif;
    text-align: center;
}

.Username_ph {
    font-family: "Amatic SC", sans-serif;
    text-align: center;
}

.lobby {
    font-family: "Amatic SC", sans-serif;
    margin: auto;
    height: 500px;
    width: 600px;
    background-color: grey;
    border-radius: 25px;
}

.lobby_lbl {
    font-family: "Amatic SC", sans-serif;
    font-size: x-large;
    text-align: center;
    
}

.player_lst {
    font-family: "Amatic SC", sans-serif;
    font-size: xx-large;
    padding-top: 14px;
    text-align: center;
}

.popup {
    display: none; /* Hidden by default */
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
    justify-content: center;
    align-items: center;
}

.popup-content {
    background-color: white;
    padding: 20px;
    border-radius: 5px;
    text-align: center;
}

.close {
    cursor: pointer;
    font-size: 20px;
    float: right;
}

label {
    font-weight: 1000;
    font-family: "Amatic SC", sans-serif;
    font-size: 45px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

/* Canvas styling */
#whiteboard {
    width: 100%;
    height: 100%;
    background-color: white;
}

/* Button styling */
.colorBut {
    margin-top: 10px;
}


/* Canvas should fill the container */
.whiteboard {
    height: 500px;
    width: 700px;
    border: black solid 5px;
    margin-left: auto;
    margin-right: auto;
    background-color: white;
}


/* Media query for smaller screens */
@media (max-width: 768px) {
    .lobby_lbl {
        width: 90vw;  /* Adjust width to fit smaller screens */
        height: auto;  /* Allow height to adapt */
    }
    #whiteboard {
        height: auto;
        width: 100%;
    }
}

.popup-content{
    background-color: #294d76;
    border-radius: 15px;
    border: black 5px solid;
    width: 600px;
}
.voteOpp{
    display: inline;
    margin: 2%;
    margin-bottom: 5%;
}
.voteOpp:hover{
    background-color: #fdff8b;
    border-radius: 25px;
    font-family: "Amatic SC", sans-serif;
    font-weight: 600;
    /* font-size: 20px; */
    box-shadow: #6a6a6a 0px 0px 8px;
}

